Redirected Signup Expire of Open Events

--- a/templates/EventsEngine/event_signup_expire.html
+++ b/templates/EventsEngine/event_signup_expire.html
@@ -23,7 +23,7 @@
                
      
            </div>
-           <h3 style="font-weight:500;">We regret to inform you that the event registrations have been closed. You can check our other exciting events <a href="events" target="_blank"> here. </a></h3>
+           <h3 style="font-weight:500;">We regret to inform you that the event registrations have been closed. You can check our other exciting events <a href="{% url 'events' %}"> here. </a></h3>
         </div>
     
 </div>
