Social links updated

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -58,25 +58,25 @@
             <div class="footer__right">
                 <p class="small bold">Social Media</p>
                 <ul>
-                    <li><a href="https://www.facebook.com/HackForChange"><img width="31"
+                    <li><a href="https://www.facebook.com/HackForChange" target="blank"><img width="31"
                                 src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
-                    <li><a href="https://www.instagram.com/hackforchange/"><img width="31"
+                    <li><a href="https://www.instagram.com/hackforchange/" target="blank"><img width="31"
                                 src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
-                    <li><a href="https://www.linkedin.com/showcase/hack-for-change"><img width="31"
+                    <li><a href="https://www.linkedin.com/showcase/hack-for-change" target="blank"><img width="31"
                                 src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
                     
                 </ul>
                 <ul>
-                    <li><a href="https://twitter.com/HackForChangeIN"><img width="31"
+                    <li><a href="https://twitter.com/HackForChangeIN" target="blank"><img width="31"
                             src="{% static 'images/twitter-img.png' %}" alt="Icon"></a></li>
                     <li><a href="https://calendar.google.com/calendar/u/0/embed?src=c_paashnfdl87vsg7l011n15mvqs@group.calendar.google.com&ctz=Asia/Kolkata" target="blank"><img width="31"
                             src="{% static 'images/calendar-img.png' %}" alt="Icon"></a></li>
-                    <li><a href="https://discord.gg/mnSrEBvXct"><img width="31"
+                    <li><a href="https://discord.gg/mnSrEBvXct" target="blank"><img width="31"
                             src="{% static 'images/discord-img.png' %}" alt="Icon"></a></li>
 
                 </ul>
                 <ul>
-                    <li><a href="https://github.com/HackForChangeIN"><img width="31"
+                    <li><a href="https://github.com/HackForChangeIN" target="blank"><img width="31"
                             src="{% static 'images/github-img.png' %}" alt="Icon"></a></li>
 
 
