Error pages updated

--- a/templates/HFC/404.html
+++ b/templates/HFC/404.html
@@ -15,12 +15,12 @@
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/error.jpg' %}"> 
+                <img src="{% static 'images/fail.jpg' %}"> 
             </div>
             <div class="thanku-heading">
                <h3 style="font-weight:500">
-                OOPS!! We couldnit find the requested page.</h3>
-                <h3 style="font-weight:500">Try searching or go to<a href="{% url 'home' %}" target="_blank">home page</a></h3>
+                OOPS!! We couldn't find the requested page.</h3>
+                <h3 style="font-weight:500">Try searching or go to <a href="{% url 'home' %}" >home page</a></h3>
            </div>
         </div>
     </div>
