--- a/templates/HFC/500.html
+++ b/templates/HFC/500.html
@@ -11,26 +11,15 @@
 {% endblock %}
 {% block title %} Error | Hack For Change {% endblock %}
 {% block main %}
-<!--Banner start -->
-<div class="banner-wrap">
-    <div class="content-width sm-content-width">
-        <div class="banner__main banner__main--upper banner__main--community">
-            <h1></h1>
-            <p class="large"></p>
-        </div>
-    </div>
-</div>
-</div>
-<!--Banner end -->
 <!-- Main starts -->
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/500.png' %}"> 
+                <img src="{% static 'images/fail.jpg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h3>
-                We will get back to you shortly!!!</h3>
+               <h3 style="font-weight:500">
+                OOPS!! We couldn't find the requested page.</h3>
            </div>
         </div>
     </div>
