Event signup button added to banner

--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -33,6 +33,12 @@
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
                     </p>
+                    {% if "Registrations Open" == event.registration|stringformat:"s" %}
+                     <a class="btn btn--hfc" href="{% url 'event_sign_up' event.title_slug  %}">Signup for event</a>
+                    {% else %}
+                    <a class="btn btn--hfc disabled" href="{% url 'event_sign_up' event.title_slug  %}" style="pointer-events: none; background: #8c8d8f";>Signup for event</a>
+                    {% endif %}
+                
                 </div>
             </div>
         </div>
@@ -49,6 +55,12 @@
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
                     </p>
+                    {% if "Registrations Open" == event.registration|stringformat:"s" %}
+                     <a class="btn btn--hfc" href="{% url 'event_sign_up' event.title_slug  %}">Signup for event</a>
+                    {% else %}
+                    <a class="btn btn--hfc disabled" href="{% url 'event_sign_up' event.title_slug  %}" style="pointer-events: none; background: #8c8d8f";>Signup for event</a>
+                    {% endif %}
+               
                 </div>
             </div>
         </div>
@@ -66,6 +78,11 @@
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
                     </p>
+                    {% if "Registrations Open" == event.registration|stringformat:"s" %}
+                     <p><a class="btn btn--hfc" href="{% url 'event_sign_up' event.title_slug  %}">Signup for event</a></p>
+                    {% else %}
+                    <a class="btn btn--hfc disabled" href="{% url 'event_sign_up' event.title_slug  %}" style="pointer-events: none; background: #8c8d8f";>Signup for event</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
