Error page text improved

--- a/templates/HFC/404.html
+++ b/templates/HFC/404.html
@@ -20,7 +20,7 @@
             <div class="thanku-heading">
                <h3 style="font-weight:500">
                 OOPS!! We couldn't find the requested page.</h3>
-                <h3 style="font-weight:500">Try searching or go to <a href="{% url 'home' %}" >home page</a></h3>
+                <h3 style="font-weight:500">Go to <a href="{% url 'home' %}" >home page</a></h3>
            </div>
         </div>
     </div>
