--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -126,7 +126,8 @@
                 </div>  
                 {% if "Registrations Open" == event.registration|stringformat:"s" %}
                 
-                <a class="btn btn--info " id ="eventsignup" href="{% url 'google_login' %}" data-onsuccess="Google_signIn" sub-change-url="{% url 'event_sign_up' event.title_slug  %}" check-url ="{% url 'member_exist' %}">Signup for event</a>
+                <a class="btn btn--info " id ="eventsignup" href="{% url 'event_sign_up' event.title_slug %}" data-onsuccess="Google_signIn" sub-change-url="{% url 'event_sign_up' event.title_slug  %}" check-url ="{% url 'member_exist' %}">Signup for event</a>
+                <a class="btn btn--info " id ="eventsignup" href="{% url 'google_login' event.title_slug %}" >Signup with Google</a>
                 
                 <!----  <div class="g-signin2" data-onsuccess="Google_signIn" data-color="red"></div>-->
                 {% else %}
