--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -78,11 +78,19 @@
                     <div class="form-control">
                         <div class="form-field">
                             <label for="">Full Name</label>
+                            {% if name %}
+                            <input type="text" name="name" maxlength="500" value = "{{name}}" required id="id_name" readonly>
+                            {% else %}
                             {{form.name}}
+                            {% endif %}
                         </div>
                         <div class="form-field">
                             <label for="">Email</label>
+                            {% if email %}
+                            <input type="email" name="email" maxlength="254" value = {{email}} required id="id_email" readonly>
+                            {%else%}
                             {{form.email}}
+                            {% endif %}
                         </div>
                     </div>
                     <div class="form-control">
@@ -235,11 +243,11 @@
     } }
 
 
-    var name = localStorage.getItem("name");
+   /* var name = localStorage.getItem("name");
     var email = localStorage.getItem("email");
     console.log(name);
     console.log(email);
     document.getElementById("id_name").value = name;
-    document.getElementById("id_email").value = email;
+    document.getElementById("id_email").value = email;*/
 </script>
 {% endblock %}
