Error page image updated

--- a/templates/HFC/500.html
+++ b/templates/HFC/500.html
@@ -15,7 +15,7 @@
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/fail.jpg' %}"> 
+                <img src="{% static 'images/error_image.svg' %}"> 
             </div>
             <div class="thanku-heading">
                <h3 style="font-weight:500">
