--- a/templates/HFC/404.html
+++ b/templates/HFC/404.html
@@ -15,11 +15,9 @@
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/fail.jpg' %}"> 
+                <img src="{% static 'images/error_image.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h3 style="font-weight:500">
-                OOPS!! We couldn't find the requested page.</h3>
                 <h3 style="font-weight:500">Go to <a href="{% url 'home' %}" >home page</a></h3>
            </div>
         </div>
