--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,6 +119,18 @@ a:hover{}
 	color: #fff;
 	background: #FFBE30;
 }
+.btn.btn--disabled{
+	border: 1px solid #FFFCF0;
+	background:#FFFCF0;
+	color:  #827E7E;
+	line-height: 38px;
+	box-shadow: #EBE2BE;
+	pointer-events: none;
+}
+.btn.btn--disabled:hover{
+	color: #827E7E;
+	background: #FFFCF0;
+}
 
 
 
