--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -117,7 +117,7 @@
                 {% if "Registrations Open" == event.registration|stringformat:"s" %}
                 <a class="btn btn--info" href="{% url 'event_sign_up' event.title_slug  %}">Signup for event</a>
                 {% else %}
-                <a class="btn btn--info disabled" href="{% url 'event_sign_up' event.title_slug  %}" style="pointer-events: none; background: #8c8d8f";>Signup for event</a>
+                <a class="btn btn--disabled" href="{% url 'event_sign_up' event.title_slug  %}" >Signup for event</a>
                 {% endif %}
             <br><br>
             </section>
