--- a/templates/HFC/404.html
+++ b/templates/HFC/404.html
@@ -18,7 +18,7 @@
                 <img src="{% static 'images/error_image.svg' %}"> 
             </div>
             <div class="thanku-heading">
-                <h3 style="font-weight:500">Go to <a href="{% url 'home' %}" >home page</a></h3>
+                <a class="btn btn--info" href="{% url 'home' %}">Home Page</a>
            </div>
         </div>
     </div>
