--- a/templates/EventsEngine/event_signup_thanks.html
+++ b/templates/EventsEngine/event_signup_thanks.html
@@ -19,9 +19,9 @@
             </div>
             <br>
             <div class="thanku-heading">
-               <h3style="font-weight:500;">Thank you for signing up for {{event.title}}. </h3>
+               <h3 style="font-weight:500;">Thank you for signing up for <strong>{{event.title}}.</strong> </h3>
            </div>
-            <h3style="font-weight:500;"> Please check your email for more details.</h3>
+            <h3 style="font-weight:500;"> Please check your email for more details.</h3>
         </div>
     </div>
 <!-- Main Ends -->
