Button color changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,7 @@ a:hover{}
 }
 .btn.btn--event:hover{
 	color: #fff;
-	background: #FFBE30;
+	background: #F99D09;
 }
 .btn.btn--disabled{
 	border: 1px solid #FFFCF0;
