--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -40,11 +40,11 @@
                     <div class="badge-sec"><strong></strong><span class="badge">{{projects_list.status}}</span></div>
                     </div>
                     </div>
-                    <p>{{projects_list.project_overview}}</p>
+                    <p>{{projects_list.project_overview|safe}}</p>
                 
                     <div class="flex-container">
                         <div class="flex-item-project-bottom-left">
-{% comment %}                             <strong>Sponsored By </strong><br><span><a href="" target="_blank">{{funding_partner|get_item:projects_list}}</a></span>
+{% comment %}              <strong>Sponsored By </strong><br><span><a href="" target="_blank">{{funding_partner|get_item:projects_list}}</a></span>
                             {% for partner in partners%}
                                 {% if partner.name|stringformat:"i" == funding_partner|get_item:projects_list|stringformat:"i" %}
                                 {{partner.website}}
