--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -59,7 +59,7 @@
                         <div class="flex-item-project-bottom-middle-right">
                             {% if projects_list.website_link %}
                             <strong>Source Code </strong><span></span> <br>
-                            <a href="{{projects_list.project_link}}" target="_blank">Github<a/> <br>
+                            <a href="{{projects_list.project_link}}" target="_blank">Github</a> <br>
                             {% endif %}      
                         </div>
                         <div class="flex-item-project-bottom-right" >
