--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -86,13 +86,25 @@
                     {%csrf_token%}
                     <div class="form-control">
                         <div class="form-field">
-                            <label for="">Full Name</label>
+                            <label for="">First Name</label>
                             {% if name %}
                             <input type="text" name="name" maxlength="500" value = "{{name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
                             {% else %}
                             {{form.name}}
+                            <!----<input type="text" name="first_name" maxlength="500" required id="id_name" >-->
                             {% endif %}
                         </div>
+                        <div class="form-field">
+                            <label for="">Last Name</label>
+                            {% if name %}
+                            <input type="text" name="name" maxlength="500" value = "{{name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
+                            {% else %}
+                            <!----<input type="text" name="last_name" maxlength="500" required id="id_name" >-->
+                            {{form.name}}
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="form-control">
                         <div class="form-field">
                             <label for="">Email</label>
                             {% if email %}
@@ -101,60 +113,11 @@
                             {{form.email}}
                             {% endif %}
                         </div>
-                    </div>
-                    <div class="form-control">
                         <div class="form-field">
                             <label for="">Contact Number</label>
                             {{form.contact_number}}
                         </div>
-                        <div class="form-field">
-                            <label for="">City</label>
-                            <div class="form-field__select">
-                                {{form.city}}
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                    </div> 
-                    <div class="form-control">
-                        <div class="form-field">
-                            <label for="">LinkedIn Profile</label>
-                            {{form.linkedin_profile}}
-                        </div>
-                        <div class="form-field">
-                            <label for="">Highest Education</label>
-                            <div class="form-field__select">
-                                {{form.highest_education}}
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
                     </div>
-                    <div class="form-control">
-                        <div class="form-field">
-                            <label for="">Profession</label>
-                            <div class="form-field__select">
-                                {{form.profession}}
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                        <div class="form-field">
-                            <label for="">Years of Experience</label>
-                            <div class="form-field__select">
-                                {{form.years_of_experience}}
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    
-                    <div class="form-control">
-                        <div class="form-field"style="margin-bottom: 5px;">
-                            <label for="">Areas of Expertise</label>
-                        </div>
-                    </div>
-                        <div id="number"><span id="error"></span></div>
-                        <div style="position:relative;padding-top:0px;width:700px;font-family:'Nunito Sans';"  >
-                            {{form.area_of_expertise }}  
-                        </div>
                     <div class="btn-outer">
                         <input class="btn btn--info btn--full" type="submit" onClick="valthisform()" value="Signup">
                     </div>
