--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -87,8 +87,8 @@
                     <div class="form-control">
                         <div class="form-field">
                             <label for="">First Name</label>
-                            {% if name %}
-                            <input type="text" name="name" maxlength="500" value = "{{name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
+                            {% if first_name %}
+                            <input type="text" name="name" maxlength="500" value = "{{first_name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
                             {% else %}
                             {{form.name}}
                             <!----<input type="text" name="first_name" maxlength="500" required id="id_name" >-->
@@ -96,8 +96,8 @@
                         </div>
                         <div class="form-field">
                             <label for="">Last Name</label>
-                            {% if name %}
-                            <input type="text" name="name" maxlength="500" value = "{{name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
+                            {% if last_name %}
+                            <input type="text" name="name" maxlength="500" value = "{{last_name}}" required id="id_name" readonly style ="background-color:#d1d1d1;">
                             {% else %}
                             <!----<input type="text" name="last_name" maxlength="500" required id="id_name" >-->
                             {{form.name}}
